# toolchain

./: CMakeLists.txt  Makefile
graphs/: atanTest.yml  cosineTest.yml  fmod.yml  greaterThan.yml  hwTest.hwg  lesserThan.yml  meanTest.yml  minmaxTest.yml  normTest.yml  oneSubgraph.yml  powTest.yml  recurrent.yml  simpleTest2.yml  swTest.bg  trigTest.yml  wsumTest.yml
src/: analyseBG.c  deployer.c  generateBG.c  generateBGFromMapping.c  generateFromTemplate.c  generateRoutingInfo.c  isp.cpp  mapper.c
templates/: NDLCom_wrapper.vhd  bg_graph_comm_config_template.vhd  bg_graph_comm_template.c  bg_graph_comm_template.h  bg_graph_comm_template.vhd  bg_graph_config_template.vhd  bg_graph_header_template.h  bg_graph_source_template.c  bg_graph_template.c  bg_graph_template.h  bg_graph_template.vhd  bg_graph_toplvl_template.c
vhdl/: bg_edge.vhd
